feat(dispatch-requests): API GET recommendation